[gd_scene load_steps=18 format=3 uid="uid://nv4j7erc5arr"]

[ext_resource type="Script" path="res://Menus/Menu.gd" id="1_qent0"]
[ext_resource type="FontFile" uid="uid://crlx3e2qnels8" path="res://Menus/img/FirecatMedium.ttf" id="2_vxcjk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tnv4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjod0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qopvi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v0df7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7e8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyed8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g74v6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btvym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdmud"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wp12x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igc3u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lufe5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7c53q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vqmn0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wa65c"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -6.0
offset_top = 7.0
offset_right = 4176.0
offset_bottom = 2060.0
script = ExtResource("1_qent0")

[node name="Menu1" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = -11.0
offset_top = -11.0
offset_right = 1917.0
offset_bottom = 1059.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu1"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Title" type="Label" parent="Menu1/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "Flamme Boom Boom"
horizontal_alignment = 1

[node name="Empty3" type="Label" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 300
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_tnv4a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wjod0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qopvi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v0df7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p7e8n")
text = "Start"
flat = true

[node name="OptionsButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_yyed8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_g74v6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btvym")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tdmud")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wp12x")
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_igc3u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lufe5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7c53q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vqmn0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wa65c")
text = "Quit"
flat = true

[node name="Menu2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1913.0
offset_top = 9.0
offset_right = 3879.0
offset_bottom = 1060.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu2"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Setting" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1

[node name="Empty3" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1

[node name="Setting2" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "Music"
horizontal_alignment = 1

[node name="Empty" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1

[node name="Resolution" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "Resolution :"
horizontal_alignment = 1

[node name="1920x1080" type="Button" parent="Menu2/VBoxContainer2/Resolution"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 4.627
offset_left = -24.0
offset_top = 79.0
offset_right = 12.0
offset_bottom = -23.977
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath("../2560x1440")
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "1920x1080"

[node name="2560x1440" type="Button" parent="Menu2/VBoxContainer2/Resolution"]
layout_mode = 0
offset_left = 539.0
offset_top = 75.0
offset_right = 1119.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "2560x1440"

[node name="1280x720" type="Button" parent="Menu2/VBoxContainer2/Resolution"]
layout_mode = 0
offset_left = -650.0
offset_top = 78.0
offset_right = -70.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
text = "1280x720"

[node name="Empty2" type="Label" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 250
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Menu2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxcjk")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_yyed8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_g74v6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btvym")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tdmud")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wp12x")
text = "Back"
flat = true

[connection signal="pressed" from="Menu1/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu1/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu1/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer2/Resolution/1920x1080" to="." method="_on_x_1080_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer2/Resolution/2560x1440" to="." method="_on_x_1440_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer2/Resolution/1280x720" to="." method="_on_x_720_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
